# Kama-HTTPServer

./: AIAppsCMakeLists.txt  CMakeLists.txt
AIApps/ChatServer/include/: ChatServer.h
AIApps/ChatServer/include/AIUtil/: AIConfig.h  AIFactory.h  AIHelper.h  AISessionIdGenerator.h  AISpeechProcessor.h  AIStrategy.h  AIToolRegistry.h  ImageRecognizer.h  MQManager.h
AIApps/ChatServer/include/handlers/: AIMenuHandler.h  AIUploadHandler.h  AIUploadSendHandler.h  ChatCreateAndSendHandler.h  ChatEntryHandler.h  ChatHandler.h  ChatHistoryHandler.h  ChatLoginHandler.h  ChatLogoutHandler.h  ChatRegisterHandler.h  ChatSendHandler.h  ChatSessionsHandler.h  (+1 more)
AIApps/ChatServer/resource/: AI.html  entry.html  menu.html  upload.html
AIApps/ChatServer/src/: ChatServer.cpp  main.cpp
HttpServer/examples/: test_client.cc
HttpServer/include/http/: HttpContext.h  HttpRequest.h  HttpResponse.h  HttpServer.h
HttpServer/include/middleware/: Middleware.h
HttpServer/include/router/: Router.h  RouterHandler.h
HttpServer/include/session/: Session.h  SessionManager.h  SessionStorage.h
HttpServer/include/ssl/: SslConfig.h  SslConnection.h  SslContext.h  SslTypes.h
HttpServer/include/utils/: FileUtil.h  MysqlUtil.h
HttpServer/src/http/: HttpContext.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpServer.cpp
HttpServer/src/router/: Router.cpp
HttpServer/src/session/: SessionManager.cpp  SessionStorage.cpp
HttpServer/src/ssl/: SslConfig.cpp  SslContext.cpp
WebApps/GomokuServer/include/: AiGame.h  GomokuServer.h
WebApps/GomokuServer/src/: AiGame.cpp  GomokuServer.cpp  main.cpp
(+45 files in other folders)
